--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -6,16 +6,14 @@
   <div class = "form container">
     <%= form_for @user do |f| %>
       <form class="form">
-        <!-- add column category -->
         <div class="form-group">
           <label for="InputUserName1">Name*</label>
           <%= f.text_field :name, :class=> 'form-control' %>
         </div>
         <div class="form-group">
           <label for="InputUserIntro1">自我介紹</label>
-          <%= f.text_area :intro, :class=> 'form-control' %>
+          <%= f.text_area :introduction, :class=> 'form-control' %>
         </div>
-
         <%= f.label :avatar, "大頭照上傳" %>
         <%= image_tag @user.avatar, width: '100px' if @user.avatar? %>
         <%= f.file_field :avatar %>
