--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -1,3 +1,16 @@
+<div class = "container">
+
+  <!-- 首頁 / 最新動態 標籤列 -->
+  <div class = "container">
+    <div class = "row">
+      <ul class="nav nav-tabs">
+        <li role="presentation" class="active"><%= link_to "首頁", root_path %></li>
+      </ul>
+    </div>
+  </div>
+  <br>
+
+
 <div>
   <%= "Index of Tweets 首頁 " %>
 </div>
