--- a/app/views/tweets/index.html.erb
+++ b/app/views/tweets/index.html.erb
@@ -9,8 +9,7 @@
     </div>
   </div>
   <br>
-
-
-<div>
-  <%= "Index of Tweets 首頁 " %>
+  <!-- New Tweet -->
+  <%= render partial: "form" %>
+  
 </div>
